--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Public Health 345, Winter 2025</title>
+<title>BDSI 2025; University of Michigan</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3054,7 +3054,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Public Health 345, Winter 2025</h1>
+<h1 class="title">BDSI 2025; University of Michigan</h1>
 </div>
 
 
@@ -3073,8 +3073,8 @@ vertical-align: -.125em;
 
 <!---
 --->
-<p><a href="https://psboonstra.github.io/prediction-lecture/slides/PredictionLecture.html#/title-slide">Lecture</a></p>
-<p><a href="https://psboonstra.github.io/prediction-lecture/slides/PredictionTutorial.html#/title-slide">Tutorial</a></p>
+<p><a href="https://psboonstra.github.io/prediction-lecture/PredictionLecture.html#/title-slide">Lecture</a></p>
+<p><a href="https://psboonstra.github.io/prediction-lecture/PredictionTutorial.html#/title-slide">Tutorial</a></p>
 
 </main>
 <!-- /main column -->
