--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>BDSI 2025; University of Michigan</title>
+<title>Prediction</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3054,7 +3054,8 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">BDSI 2025; University of Michigan</h1>
+<h1 class="title">Prediction</h1>
+<p class="subtitle lead">BDSI 2025; University of Michigan</p>
 </div>
 
 
